# TOMOJLIFEPROJECT

./: .gitignore  README.md  pyproject.toml  tasks.md  x.txt
XDeepAgents/: Production-Ready Project Scope for an AI Release Governance Agent with DeepAgents.docx  main.py  pyproject.toml
agentic_platform_engineer/: README.md  main.py  pyproject.toml  supervisor_input.py  supervisor_intake.py
agentic_platform_enginner/: README.md  Specyfikacja projektu_ Agentic Platform Engineer z Bramkami Uprawnień.docx  main.py  pyproject.toml
agents/: __init__.py  ci_cd_agent.py  deployment_agent.py  infra_agent.py  specialist_base.py  specialist_factory.py  supervisor.py
api/: app.py
contect_engineering/: prompt.MD
contracts/: __init__.py  agent_input.py  agent_output.py  agent_session_memory.py  final_report.py  task_context.py  task_request.py  task_response.py  workflow_aggregation.py  workflow_approval.py  workflow_routing.py
docs/: agent_input_format.md  agent_output_format.md  project_specification.MD  specialist_agent_base.md  specialist_agent_boundaries.md  supervisor_input_format.md
prompts/: ci_cd_agent.md  deployment_agent.md  infra_agent.md  supervisor.md
scripts/: generate_agent_flow.py
settings/: __init__.py  supervisor.py
tests/: test_agent_input.py  test_agent_output.py  test_deployment_agent.py  test_specialist_base.py  test_specialist_prompts.py  (+3 more)
x_langchain/: basic_run.py  data_analysis.py  internet_search.py  pyproject.toml
x_langchain/analysis_output/: analysis_message.txt
x_langchain/data_analysis/: main.py  pyproject.toml
(+58 files in other folders)
